# ui/desktop/openapi.json
@@ -7234,9 +7234,22 @@
       "RepoVariantsResponse": {
         "type": "object",
         "required": [
-          "variants"
+          "variants",
+          "available_memory_bytes",
+          "downloaded_quants"
         ],
         "properties": {
+          "available_memory_bytes": {
+            "type": "integer",
+            "format": "int64",
+            "minimum": 0
+          },
+          "downloaded_quants": {
+            "type": "array",
+            "items": {
+              "type": "string"
+            }
+          },
           "recommended_index": {
             "type": "integer",
             "nullable": true,
